[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.widget.cron"
version = "2.0a2.dev0"
description = "Cron widget for YAFOWIL"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "crontab",
    "yafowil>2.2",
]

[project.optional-dependencies]
test = [
    "lxml",
    "pytest",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.widget.cron:register"
example = "yafowil.widget.cron.example:get_example"

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]
[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
